// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a disabled select 1`] = `
<div
  aria-disabled={true}
  aria-expanded={false}
  center={false}
  className="ui-select ui-select--disabled"
  data-test="ui-select"
  onSelect={[Function]}
  open={false}
  role="menu"
>
  <div
    className="ui-select__inner"
    onClick={undefined}
  >
    <span
      className="em7k1990 css-11q5r6a"
      color="navy500"
      onClick={undefined}
      size="small"
      style={Object {}}
    >
      Select…
    </span>
    <div
      className="ui-select__chevron"
    >
      <i
        className="e2anemp0 css-1kj0oyh"
        color="grey500"
        onClick={undefined}
        size={24}
        style={Object {}}
        title={undefined}
      >
        <svg
          aria-hidden="true"
          height={24}
          width={24}
        >
          <use
            xlinkHref="#chevron_right"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    className="ui-select__option-group"
    data-test="ui-select__options"
    onClick={[Function]}
    open={false}
  >
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Hertfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hertfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Bedfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Bedfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Oxfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Oxfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Hampshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hampshire
      </div>
    </div>
  </div>
</div>
`;

exports[`Select should render a readonly select 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  center={false}
  className="ui-select ui-select--read-only"
  data-test="ui-select"
  onSelect={[Function]}
  open={false}
  role="menu"
>
  <div
    className="ui-select__inner"
    onClick={undefined}
  >
    <span
      className="em7k1990 css-11q5r6a"
      color="navy500"
      onClick={undefined}
      size="small"
      style={Object {}}
    >
      Select…
    </span>
    <div
      className="ui-select__chevron"
    >
      <i
        className="e2anemp0 css-1kj0oyh"
        color="grey500"
        onClick={undefined}
        size={24}
        style={Object {}}
        title={undefined}
      >
        <svg
          aria-hidden="true"
          height={24}
          width={24}
        >
          <use
            xlinkHref="#chevron_right"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    className="ui-select__option-group"
    data-test="ui-select__options"
    onClick={[Function]}
    open={false}
  >
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Hertfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hertfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Bedfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Bedfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Oxfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Oxfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Hampshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hampshire
      </div>
    </div>
  </div>
</div>
`;

exports[`Select should render shallow component ok 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  center={false}
  className="ui-select"
  data-test="ui-select"
  onSelect={[Function]}
  open={false}
  role="menu"
>
  <div
    className="ui-select__inner"
    onClick={[Function]}
  >
    <span
      className="em7k1990 css-13hvkxd"
      color="navy700"
      onClick={undefined}
      size="small"
      style={Object {}}
    >
      Select…
    </span>
    <div
      className="ui-select__chevron"
    >
      <i
        className="e2anemp0 css-84m9du"
        color="navy700"
        onClick={undefined}
        size={24}
        style={Object {}}
        title={undefined}
      >
        <svg
          aria-hidden="true"
          height={24}
          width={24}
        >
          <use
            xlinkHref="#chevron_right"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    className="ui-select__option-group"
    data-test="ui-select__options"
    onClick={[Function]}
    open={false}
  >
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Hertfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hertfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Bedfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Bedfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Oxfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Oxfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Hampshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hampshire
      </div>
    </div>
  </div>
</div>
`;
